# Houston

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  build_release.sh  run.sh  run_tests.sh  status_monitor_test.cpp
machine_opt/: machine_optimizer.cpp
src/: main.cpp
src/processes_list/: network_tracker.cpp  network_tracker.hpp  process.cpp  process.hpp  processes_list.cpp  processes_list.hpp
src/smart_sparker/: get_https.cpp  get_https.hpp  json.hpp  load_env.cpp  load_env.hpp  process_sorter.cpp  process_sorter.hpp
src/smart_sparker/machine_opt/: machine_optimizer.cpp  machine_optimizer.hpp
src/status_monitor/: status_monitor.cpp  status_monitor.hpp
src/ui/: main_view.cpp  main_view.hpp  process_detail_view.cpp  process_detail_view.hpp  processes_view.cpp  processes_view.hpp  processes_view_event_handler.hpp  processes_view_inputs.cpp  processes_view_inputs.hpp  processes_view_state.hpp  processes_view_table.hpp  status_view.cpp  status_view.hpp
src/ui/machine_optimizer_view/: machine_optimizer_view.cpp  machine_optimizer_view.hpp
src/ui/process_view/: process_detail_view.hpp  processes_view.hpp  processes_view_event_handler.cpp  processes_view_event_handler.hpp  processes_view_inputs.cpp  processes_view_inputs.hpp  processes_view_state.hpp  processes_view_table.cpp  processes_view_table.hpp
src/ui/status_view/: cpu_info_view.cpp  cpu_info_view.hpp  mem_info_view.cpp  mem_info_view.hpp  status_view.cpp  status_view.hpp
tests/: test_network_tracker.cpp  test_process.cpp  test_processes_view.cpp
